--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,21 +4,17 @@
   | default @import url()
   |============================
 */
+@import url('./fonts.css');
 @import url('./reset.css');
+@import url('./variable.css');
+@import url('./components.css');
+
 @import url('./header.css');
-
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
+@import url('./hero.css');
+@import url('./section-home-page.css');
+@import url('./filters.css');
+@import url('./products-list.css');
+@import url('./popular-products.css');
+@import url('./discount-products.css');
+@import url('./modal-product-card.css');
+@import url('./footer.css');
