--- a/src/css/variable.css
+++ b/src/css/variable.css
@@ -1,10 +1,10 @@
 :root {
-  --white: #ffffff;
-  --blue-font: #0a224a;
-  --dark-grey: #7a7a7a;
-  --grey: #b6b6b6;
-  --light-grey: #d9d9d9;
-  --light-blue: #f7faff;
-  --red: #e74a3b;
-  --blue-focus: #061835;
+  --background-color: #e8e8e2;
+  --white-color: #fafafa;
+  --gray-color: #a3a3a3;
+  --black-color: #010101;
+  --olive-color: #6d8434;
+  --orange-color: #fdc152;
+
+  --default-tranzition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
