--- a/src/css/components.css
+++ b/src/css/components.css
@@ -1,9 +1,9 @@
 body {
-  font-family: Roboto, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  color: var(--blue-font);
-  background-color: var(--white);
+  font-family: 'Neue Montreal', sans-serif;
+  font-size: 18px;
+  line-height: 1.333;
+  color: var(--black-color);
+  background-color: var(--background-color);
 }
 ul,
 ol {
