--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,90 @@
+<footer class="footer">
+  <div class="footer-container container">
+    <div class="wrapper">
+      <div class="footer-first-box">
+        <div class="footer-logo-text-container">
+          <a href="./index.html" class="logo-link link">
+            <svg class="logo" width="16" height="16">
+              <use href="../images/icons/icons.svg#icon-cabbage"></use>
+            </svg>
+          </a>
+          <a href="./index.html" class="footer-logo-link link">Food Boutique</a>
+        </div>
 
+        <ul class="footer-socials-list list">
+          <li class="footer-socials-item">
+            <a
+              href="https://www.facebook.com/goITclub/"
+              target="_blank"
+              class="socials-link link"
+              ><svg class="socials-logo" width="24" height="24">
+                <use href="../images/icons/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-item">
+            <a
+              href="https://www.instagram.com/goitclub/ "
+              target="_blank"
+              class="socials-link link"
+            >
+              <svg class="socials-logo" width="24" height="24">
+                <use href="../images/icons/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-item">
+            <a
+              href="https://www.youtube.com/c/GoIT"
+              target="_blank"
+              class="socials-link link"
+            >
+              <svg class="socials-logo" width="24" height="24">
+                <use href="../images/icons/icons.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer-second-box">
+        <div class="footer-text-box">
+          <p class="footer-first-text">
+            Discover the Variety of Flavors and Quality
+          </p>
+          <p class="footer-second-text">
+            An online store where you will find fresh, natural and delicious
+            products for a healthy life and unforgettable gastronomic
+            adventures.
+          </p>
+        </div>
+        <div class="footer-form-container">
+          <p class="footer-form-subscribe">
+            Subscribe and learn about new products!
+          </p>
+          <form class="footer-form">
+            <label class="footer-label">
+              <input
+                class="footer-input"
+                type="email"
+                name="email"
+                placeholder="Email"
+                required
+              />
+            </label>
+            <button class="footer-form-btn" type="submit">Send</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-rights-policy-terms">
+      <p class="footer-rights">Food Boutique. All rights reserved.</p>
+      <div class="policy-terms-box">
+        <a href="" class="footer-policy link">Privacy Policy</a>
+        <span>/</span>
+        <a href="" class="footer-terms link">Terms of Service</a>
+      </div>
+    </div>
+  </div>
+</footer>
