--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -7,6 +7,7 @@
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Neue Montreal';
   src: local('Neue Montreal Medium'), local('Neue-Montreal-Medium'),
@@ -16,11 +17,11 @@
   font-weight: 500;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Quincy CF';
   src: url('../fonts/FONTSPRINGDEMO-QuincyCFBlackRegular.eot');
-  src: url('../fonts/FONTSPRINGDEMO-QuincyCFBlackRegular.eot?#iefix')
-      format('embedded-opentype'),
+  src: url('../fonts/FONTSPRINGDEMO-QuincyCFBlackRegular.eot?#iefix') format('embedded-opentype'),
     url('../fonts/FONTSPRINGDEMO-QuincyCFBlackRegular.woff2') format('woff2'),
     url('../fonts/FONTSPRINGDEMO-QuincyCFBlackRegular.woff') format('woff'),
     url('../fonts/FONTSPRINGDEMO-QuincyCFBlackRegular.ttf') format('truetype');
