--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,26 @@
+<!-- Mobile menu in svg -->
+<header class="header container">
+    <nav class="nav flex ">
+        <div class="logo-box ">
+            <a href="../index.html" class="logo flex">
+                <div class="logo-img flex">
+                    <svg class="logo-svg">
+                        <use href="./images/icons/icons.svg#icon-logo"></use>
+                    </svg>
+                </div>
+                <span class="logo-text">food boutique</span>
+            </a>
+        </div>
+        <div class="flex">
+            <a href="../index.html" class="btn-home flex"><span class="btn-home-text">home</span></a>
+            <a class="heder-cart-link" href=". /cart.html">
+                <svg class="heder-cart" width="18" height="18">
+                    <use href="../images/icons/icons.svg#icon-shopping-cart"></use>
+                </svg>
+            </a>
+            <p class="heder-cart-text">cart<span class="item-number"></span>()</p>
+        </div>
+        </div>
+    </nav>
 
+</header>
