--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,5 @@
 @import url('./discount-products.css');
 @import url('./modal-product-card.css');
 @import url('./footer.css');
+
+@import url('./cart.css');
