change index.html structure

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,7 @@
 @import url('./section-home-page.css');
 @import url('./filters.css');
 @import url('./products-list.css');
+@import url('./pagination.css');
 @import url('./popular-products.css');
 @import url('./discount-products.css');
 @import url('./modal-product-card.css');
