--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
             <a href="../index.html" class="logo flex">
                 <div class="logo-img flex">
                     <svg class="logo-svg">
-                        <use href="./images/icons/icons.svg#icon-logo"></use>
+                        <use href="./images/icons/icons.svg#icon-cabbage"></use>
                     </svg>
                 </div>
                 <span class="logo-text">food boutique</span>
