--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <!-- Mobile menu in svg -->
 <header class="header container">
   <nav class="nav flex">
-    <div class="logo-box">
+    <div class="logo-box flex">
       <a href="./index.html" class="logo flex">
         <div class="logo-img flex">
           <svg class="logo-svg">
