--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,4 +20,4 @@
 @import url('./modal-product-card.css');
 @import url('./footer.css');
 
-@import url('./cart.css');
+@import url('./basket.css');
