--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -1,1 +1,33 @@
 
+  <h2 class="filters">Filters:</h2>
+  <div class="search-params"></div>
+  <form>
+    <div class="input-wrapper">
+      <input
+        class="search-input"
+        type="text"
+        id="searchInput"
+        name="searchInput"
+        placeholder="Search for anything"
+      />
+      <button type="submit" class="search-button">
+        <svg class="icon-search" width="20" height="20">
+          <use href="../images/icons/icons.svg#icon-search"></use>
+        </svg>
+      </button>
+    </div>
+
+    <select class="categorias-search" id="searchParams1" name="searchParam">
+      <option value="" data-placeholder="true"></option>
+      <option value="option1">Опція 1</option>
+      <option value="option2">Опція 2</option>
+      <option value="option3">Опція 3</option>
+    </select>
+
+    <!-- <select class="categorias-search" id="searchParams2" name="searchParam">
+      <option value="option1">Опція 1</option>
+      <option value="option2">Опція 2</option>
+      <option value="option3">Опція 3</option>
+    </select> -->
+  </form>
+</div>
