--- a/src/partials/discount-products.html
+++ b/src/partials/discount-products.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./discount-products.html" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="discount-products-container">
+      <h2 class="products-title">Discount products</h2>
+      <ul class="discount-products-list">
+        <li class="discount-products-item">
+          <div class="card-image-discount">
+            <svg class="icon-discount" width="60" height="60">
+              <use href="../images/icons/icons.svg#icon-discount"></use>
+            </svg>
+            <img src="${img}" alt="${name}" />
+          </div>
+          <div class="discount-card-info">
+            <p class="discount-card-text">${name}</p>
+            <p class="discount-card-text price">${price}</p>
+            <button class="button-shopping-discount">
+              <svg class="icon-shopping-discount" width="18" height="18">
+                <use href="../images/icons/icons.svg#icon-shopping-cart"></use>
+              </svg>
+            </button>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </body>
+</html>
