--- a/src/css/popular-products.css
+++ b/src/css/popular-products.css
@@ -1,6 +1,6 @@
-.popular-products-container {
+/* .popular-products-container {
     
-}
+} */
 
 .products-title {
     color: var(--black-color);
@@ -10,8 +10,8 @@
     line-height: 1.16;
 }
 
-.popular-products-list {
-}
+/* .popular-products-list {
+} */
 
 
 
