--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,7 +15,7 @@
       <a href="./index.html" class="btn-home flex">
         <span class="btn-home-text">home</span>
       </a>
-      <a class="heder-cart-link" href="../cart.html">
+      <a class="heder-cart-link" href="./cart.html">
         <svg class="heder-cart" width="18" height="18">
           <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
         </svg>
