--- a/src/partials/discount-products.html
+++ b/src/partials/discount-products.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/discount-products.css" />
   </head>
   <body>
-    <div class="discount-products-container">
+    <!-- <div class="discount-products-container">
       <h2 class="products-title">Discount products</h2>
       <ul class="discount-products-list">
         <li class="discount-products-item">
@@ -27,6 +27,6 @@
           </div>
         </li>
       </ul>
-    </div>
+    </div> -->
   </body>
 </html>
