--- a/src/partials/popular-products.html
+++ b/src/partials/popular-products.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/popular-products.css" />
   </head>
   <body>
-    <div class="popular-products-container">
+    <!-- <div class="popular-products-container">
       <h2 class="products-title">Popular products</h2>
       <ul class="popular-products-list">
         <li class="popular-products-item">
@@ -32,6 +32,6 @@
           </button>
         </li>
       </ul>
-    </div>
+    </div> -->
   </body>
 </html>
