--- a/src/partials/popular-products.html
+++ b/src/partials/popular-products.html
@@ -1,27 +1,40 @@
-<!-- <div class="popular-products-container">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <div class="popular-products-container">
       <h2 class="products-title">Popular products</h2>
       <ul class="popular-products-list">
-        <li class="popular-products-item">
-          <div class="card-image">
-            <img src="${img}" alt="${name}" />
-          </div>
-          <div class="card-info">
-            <h3 class="products-card-title">${name}</h3>
-            <p class="popular-cards-text category">
-              Category: <span>${category}</span>
-            </p>
-            <div class="text-box">
-              <p class="popular-cards-text">Size: <span>${size}</span></p>
-              <p class="popular-cards-text">
-                Popularity: <span>${popularity}</span>
-              </p>
-            </div>
-          </div>
-          <button class="button-shopping">
-            <svg class="icon-shopping" width="12" height="12">
-              <use href="../images/icons/icons.svg#icon-shopping-cart"></use>
-            </svg>
-          </button>
-        </li>
+        <!-- <li class="popular-products-item">
+      <div class="card-image">
+        <img src="${img}" alt="${name}" />
+      </div>
+      <div class="card-info">
+        <h3 class="products-card-title">${name}</h3>
+        <p class="popular-cards-text category">
+          Category: <span>${category}</span>
+        </p>
+        <div class="text-box">
+          <p class="popular-cards-text">Size: <span>${size}</span></p>
+          <p class="popular-cards-text">
+            Popularity: <span>${popularity}</span>
+          </p>
+        </div>
+      </div>
+      <button class="button-shopping">
+        <svg class="icon-shopping" width="12" height="12">
+          <use href="../images/icons/icons.svg#icon-shopping-cart"></use>
+        </svg>
+      </button>
+    </li> -->
       </ul>
-    </div> -->
+    </div>
+    <script
+      type="module"
+      src="../js/markup.js/createMarkupPopularProducts.js"
+    ></script>
+  </body>
+</html>
