--- a/src/css/products-list.css
+++ b/src/css/products-list.css
@@ -84,12 +84,13 @@
     .price-product {
         line-height: 1.2;
     }
-    .button-shopping:hover {
-        background-color: var(--olive-hover-color);
-    }
-    
+    .button-shopping:hover,
     .button-shopping:focus {
         background-color: var(--olive-hover-color);
+    }
+    .product-card:hover,
+    .product-card:focus {
+        box-shadow: 0px 9.1px 16.53437px 0px rgba(0, 0, 0, 0.02), 0px 41.6px 46.475px 0px rgba(0, 0, 0, 0.04), 0px 105.3px 124.67812px 0px rgba(0, 0, 0, 0.05), 0px 208px 286px 0px rgba(0, 0, 0, 0.07);
     }
 }
 
