fix discount container

--- a/src/partials/discount-products.html
+++ b/src/partials/discount-products.html
@@ -1,7 +1,7 @@
-<!-- <div class="discount-products-container">
-      <h2 class="products-title">Discount products</h2>
-      <ul class="discount-products-list">
-        <li class="discount-products-item">
+<div class="discount-products-container">
+  <h2 class="products-title">Discount products</h2>
+  <ul class="discount-products-list">
+    <!-- <li class="discount-products-item">
           <div class="card-image-discount">
             <svg class="icon-discount" width="60" height="60">
               <use href="../images/icons/icons.svg#icon-discount"></use>
@@ -17,6 +17,6 @@
               </svg>
             </button>
           </div>
-        </li>
-      </ul>
-    </div> -->
+        </li> -->
+  </ul>
+</div>
