--- a/src/partials/modal-product-card.html
+++ b/src/partials/modal-product-card.html
@@ -1,1 +1,39 @@
+<div class="modal" data-modal>
+    <div class="modal-content">
+        <button type="button" data-modal-close class="close">
+            <svg class="icon-close" width="22" height="22">
+                <use href="../images/icons/icons.svg#icon-close-sharp"></use>
+            </svg>
+        </button> 
+        <div class="wrapper">
+            <div class="picture">
+                <img src="${name}" alt="${name}" width="160">
+            </div>
 
+            <div class="modal-container">
+                <h3 class="modal-name">${name}</h3>
+                <ul class="modal-list list">
+                    <div class="group-item">
+                        <li>Category: <span class="category modal-item">${category}</span></li>
+                        <li>Size: <span class="size modal-item">${size}</span></li>
+                    </div>
+                    <li>Popularity: <span class="popularity modal-item">${popularity}</span></li>
+                </ul>
+                <p class="modal-text">
+                    ${text}
+                </p>
+            </div>
+        </div>
+        
+        <div class="price-wrapper wrapper">
+            <p class="modal-price">${price}</p>
+            <button class="add-to-cart-btn btn" type="button">
+                Add to
+                <svg class="icon-cart" width="18" height="18">
+                    <use href="../images/icons/icons.svg#icon-shopping-cart"></use>
+                </svg>
+            </button>
+        </div>
+        
+    </div>
+</div>
