--- a/src/css/filters.css
+++ b/src/css/filters.css
@@ -1,43 +1,42 @@
-.search-params {
+.home_search-params {
   text-align: center;
 }
-.filters {
+.home_filters {
   color: var(--gray-color);
   font-size: 14px;
   font-weight: 400;
-  line-height: 1.28;
+  line-height: 1.28em;
   margin-bottom: 8px;
 }
-.input-wrapper {
+.home_input-wrapper {
   position: relative;
   display: inline-block;
   margin-bottom: 12px;
 }
 
-.search-input {
+.home_search-input {
   width: 335px;
-  height: 48px;
   padding: 14px 20px;
   border-radius: 30px;
   border: 1px solid var(--olive-color);
   outline: none;
 }
-.search-input::placeholder {
+.home_search-input::placeholder {
   color: var(--black-color);
   font-size: 14px;
   font-weight: 400;
-  line-height: 1.29;
+  line-height: 1.29em;
   min-width: 159 px;
 }
-.search-input:placeholder-shown {
-  border: var(--gray-color);
+.home_search-input:placeholder-shown {
+  border: 1px solid #0101014d;
 }
 
-.search-input:active {
+.home_search-input:active {
   border-color: var(--olive-color);
 }
 
-.search-button {
+.home_search-button {
   position: absolute;
   top: 50%;
   right: 20px;
@@ -46,15 +45,18 @@
   padding: 10px 0;
 }
 
-.icon-search {
+.home_icon-search {
   fill: var(--black-color);
 }
 
-.categorias-search {
+.home_categorias-search {
+  margin-bottom: 12px;
+}
+.home_select-categories {
   width: 335px;
-  height: 48px;
-  padding: 14px 20px;
-  border-radius: 30px;
+}
+.home_select-sort {
+  width: 335px;
 }
 
 @media screen and (min-width: 768px) {
@@ -66,6 +68,28 @@
   body {
     font-size: 18px;
   }
-  .search-input {
+  .home_form {
+    display: flex;
+    gap: 8px;
+  }
+  .home_search-input {
+    width: 269px;
+  }
+  .home_search-input::placeholder {
+    font-size: 18px;
+    line-height: 13.3em;
+  }
+  .home_select-categories {
+    width: 189px;
+  }
+  .home_select-sort {
+    width: 200px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1270px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
