--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -1,33 +1,47 @@
-
-  <h2 class="filters">Filters:</h2>
-  <div class="search-params"></div>
+<div>
+  <h2 class="home_filters">Filters:</h2>
+  <div class="home_search-params"></div>
   <form>
-    <div class="input-wrapper">
-      <input
-        class="search-input"
-        type="text"
-        id="searchInput"
-        name="searchInput"
-        placeholder="Search for anything"
-      />
-      <button type="submit" class="search-button">
-        <svg class="icon-search" width="20" height="20">
-          <use href="../images/icons/icons.svg#icon-search"></use>
-        </svg>
-      </button>
+    <div class="home_form">
+      <div class="home_input-wrapper">
+        <input
+          class="home_search-input"
+          type="text"
+          id="searchInput"
+          name="searchInput"
+          placeholder="Search for anything"
+        />
+        <button type="submit" class="home_search-button">
+          <svg class="home_icon-search" width="20" height="20">
+            <use href="../images/icons/icons.svg#icon-search"></use>
+          </svg>
+        </button>
+      </div>
+
+      <div class="home_select-categories">
+        <select
+          class="home_categorias-search"
+          id="searchParams1"
+          name="searchParam"
+        >
+          <option value="" data-placeholder="true"></option>
+          <option value="option1">Опція 1</option>
+          <option value="option2">Опція 2</option>
+          <option value="option3">Опція 3</option>
+        </select>
+      </div>
+      <div class="home_select-sort">
+        <select
+          class="home_categorias-sort"
+          id="searchParams2"
+          name="searchParam"
+        >
+          <option value="" data-placeholder="true"></option>
+          <option value="option1">Опція 1</option>
+          <option value="option2">Опція 2</option>
+          <option value="option3">Опція 3</option>
+        </select>
+      </div>
     </div>
-
-    <select class="categorias-search" id="searchParams1" name="searchParam">
-      <option value="" data-placeholder="true"></option>
-      <option value="option1">Опція 1</option>
-      <option value="option2">Опція 2</option>
-      <option value="option3">Опція 3</option>
-    </select>
-
-    <!-- <select class="categorias-search" id="searchParams2" name="searchParam">
-      <option value="option1">Опція 1</option>
-      <option value="option2">Опція 2</option>
-      <option value="option3">Опція 3</option>
-    </select> -->
   </form>
 </div>
