--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,7 @@
         <div class="footer-logo-text-container">
           <a href="./index.html" class="logo-link link">
             <svg class="logo" width="16" height="16">
-              <use href="../images/icons/icons.svg#icon-cabbage"></use>
+              <use href="./images/icons/icons.svg#icon-cabbage"></use>
             </svg>
           </a>
           <a href="./index.html" class="footer-logo-link link">Food Boutique</a>
@@ -16,9 +16,10 @@
             <a
               href="https://www.facebook.com/goITclub/"
               target="_blank"
+              rel="noopener no-referrer"
               class="socials-link link"
               ><svg class="socials-logo" width="24" height="24">
-                <use href="../images/icons/icons.svg#icon-facebook"></use>
+                <use href="./images/icons/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
@@ -26,10 +27,11 @@
             <a
               href="https://www.instagram.com/goitclub/ "
               target="_blank"
+              rel="noopener no-referrer"
               class="socials-link link"
             >
               <svg class="socials-logo" width="24" height="24">
-                <use href="../images/icons/icons.svg#icon-instagram"></use>
+                <use href="./images/icons/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
@@ -37,10 +39,11 @@
             <a
               href="https://www.youtube.com/c/GoIT"
               target="_blank"
+              rel="noopener no-referrer"
               class="socials-link link"
             >
               <svg class="socials-logo" width="24" height="24">
-                <use href="../images/icons/icons.svg#icon-youtube"></use>
+                <use href="./images/icons/icons.svg#icon-youtube"></use>
               </svg>
             </a>
           </li>
@@ -65,11 +68,16 @@
           <form class="footer-form">
             <label class="footer-label">
               <input
+                id="input"
                 class="footer-input"
                 type="email"
                 name="email"
                 placeholder="Email"
+                title="xxxx@yyy.com"
+                aria-label="Email"
+                autofocus
                 required
+                pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
               />
             </label>
             <button class="footer-form-btn" type="submit">Send</button>
@@ -81,9 +89,21 @@
     <div class="footer-rights-policy-terms">
       <p class="footer-rights">Food Boutique. All rights reserved.</p>
       <div class="policy-terms-box">
-        <a href="" class="footer-policy link">Privacy Policy</a>
+        <a
+          href="https://www.freeprivacypolicy.com/live/f1ec1e9a-d65b-4d41-a840-424a3674fd56"
+          class="footer-policy link"
+          target="_blank"
+          rel="noopener no-referrer"
+          >Privacy Policy</a
+        >
         <span>/</span>
-        <a href="" class="footer-terms link">Terms of Service</a>
+        <a
+          href="https://www.freeprivacypolicy.com/live/f925529a-df02-4c84-a792-7b270ee39ee9"
+          class="footer-terms link"
+          target="_blank"
+          rel="noopener no-referrer"
+          >Terms of Service</a
+        >
       </div>
     </div>
   </div>
