--- a/src/partials/modal-product-card.html
+++ b/src/partials/modal-product-card.html
@@ -1,5 +1,5 @@
 <div class="modal" data-modal>
-    <div class="modal-content">
+    <!-- <div class="modal-content">
         <button type="button" data-modal-close class="close">
             <svg class="icon-close" width="22" height="22">
                 <use href="../images/icons/icons.svg#icon-close-sharp"></use>
@@ -34,6 +34,5 @@
                 </svg>
             </button>
         </div>
-        
-    </div>
+    </div> -->
 </div>
