--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -13,7 +13,7 @@
         />
         <button type="submit" class="home_search-button">
           <svg class="home_icon-search" width="20" height="20">
-            <use href="../images/icons/icons.svg#icon-search"></use>
+            <use href="./images/icons/icons.svg#icon-search"></use>
           </svg>
         </button>
       </div>
