--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -37,9 +37,13 @@
           name="searchParam"
         >
           <option value="" data-placeholder="true"></option>
-          <option value="option1">Опція 1</option>
-          <option value="option2">Опція 2</option>
-          <option value="option3">Опція 3</option>
+          <option value="option1">A to Z</option>
+          <option value="option2">Z to A</option>
+          <option value="option3">Cheap</option>
+          <option value="option3">Expensive</option>
+          <option value="option3">Popular</option>
+          <option value="option3">Not popular</option>
+          <option value="option3">Show all</option>
         </select>
       </div>
     </div>
