--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -1,14 +1,14 @@
 <div>
   <h2 class="home_filters">Filters:</h2>
   <div class="home_search-params"></div>
-  <form>
+  <form class="home__form-search">
     <div class="home_form">
       <div class="home_input-wrapper">
         <input
           class="home_search-input"
           type="text"
           id="searchInput"
-          name="searchInput"
+          name="keyword"
           placeholder="Search for anything"
         />
         <button type="submit" class="home_search-button">
@@ -22,24 +22,25 @@
         <select
           class="home_categorias-search"
           id="searchParams1"
-          name="searchParam"
+          name="category"
         >
-          <option value="" data-placeholder="true"></option>
-          <option value="option1">Опція 1</option>
-          <option value="option2">Опція 2</option>
-          <option value="option3">Опція 3</option>
+          <option data-placeholder="true"></option>
         </select>
       </div>
       <div class="home_select-sort">
         <select
           class="home_categorias-sort"
           id="searchParams2"
-          name="searchParam"
+          name="searchSort"
         >
-          <option value="" data-placeholder="true"></option>
-          <option value="option1">Опція 1</option>
-          <option value="option2">Опція 2</option>
-          <option value="option3">Опція 3</option>
+          <option value="byABC=true" data-placeholder="true"></option>
+          <option value="byABC=true">A-Z</option>
+          <option value="byABC=false">Z-A</option>
+          <option value="byPrice=true">Cheap</option>
+          <option value="byPrice=false">Expensive</option>
+          <option value="byPopularity=false">Popular</option>
+          <option value="byPopularity=true">Not popular</option>
+          <option value="">Show All</option>
         </select>
       </div>
     </div>
