--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,16 +11,18 @@
         <span class="logo-text">food boutique</span>
       </a>
     </div>
-    <div class="flex">
+    <div class="basket-header-box flex">
       <a href="./index.html" class="btn-home flex">
         <span class="btn-home-text">home</span>
       </a>
-      <a class="heder-cart-link" href="./cart.html">
+      <button class="heder-cart-link js-header-cart ddd">
         <svg class="heder-cart" width="18" height="18">
           <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
         </svg>
-      </a>
-      <p class="heder-cart-text">cart<span class="item-number"></span>()</p>
+      </button>
+      <p class="heder-cart-text">cart</p>
+      <div class="cart-number-box">(<span class="item-number"></span>)</div>
     </div>
   </nav>
+
 </header>
