basket-second-commit

--- a/src/css/basket.css
+++ b/src/css/basket.css
@@ -31,6 +31,8 @@
 .cart-content {
   text-align: center;
   margin-top: 50px;
+  /* IMPORTANT!!! */
+  visibility: hidden;
 }
 
 .cart-content img {
@@ -50,4 +52,148 @@ p {
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
+}
+/* PRODUCTS IN THE BASKET */
+/* .cart-title{
+text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+} */
+.delete-and-closebtn {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.product-card {
+  display: flex;
+  border: 1px solid #ddd;
+  padding: 10px;
+  margin: 10px;
+  gap: 40px;
+}
+
+.product-image {
+  width: 120px;
+  height: 120px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #FAFAFA;
+  padding-right: 40px;
+
+}
+
+.product-details {
+  flex: 1;
+}
+
+.product-name {
+  color: var(--black-color);
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.cart-product-box {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding-top: 12px;
+}
+
+.product-category,
+.product-size {
+  color: rgba(1, 1, 1, 0.30);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14px;
+}
+
+.category-slyle,
+.size-style {
+  color: var(--black-color);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+.product-price {
+  color: var(--black-color);
+  font-size: 20px;
+  line-height: 24px;
+  padding-top: 46px;
+}
+
+.delete-all-button {
+  background-color: var(--background-color);
+  color: var(--black-color);
+  /* width: 100%; */
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 20px
+}
+
+.icon-close {
+  color: var(--black-color);
+}
+
+
+
+/* YOUR ORDER */
+.order-container {
+  display: flex;
+}
+
+.flex-cart {
+  display: flex;
+  gap: 101px;
+}
+
+/* .order-title{
+ 
+} */
+.summary-box {
+  border-radius: 8px;
+  background: rgba(109, 132, 52, 0.05);
+  width: 590px;
+  height: 60px;
+  gap: 364px;
+  display: flex;
+  padding: 22px 28px 14px;
+  margin-top: 40px;
+
+}
+
+.email-and-checkout {
+  display: flex;
+  gap: 16px;
+  padding-top: 40px;
+}
+
+.sum-style {
+  display: flex;
+  justify-content: flex-end;
+
+}
+
+.email-input {
+  padding: 10px;
+  border-radius: 30px;
+  border: 1px solid rgba(1, 1, 1, 0.30);
+  background-color: transparent;
+  width: 359px;
+}
+
+.checkout-button {
+  display: inline-flex;
+  padding: 15px 65px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 30px;
+  background: #6D8434;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.checkout-button:hover {
+  background-color: #4d602b;
 }
