--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -5,11 +5,47 @@
         <use href="./images/icons/icons.svg#icon-shopping-cart"></use>
       </svg>
     </div>
-
-    <div class="cart-info">
-      <h1 id="cartTitle">Cart (0)</h1>
+<div class="cart-info">
+  <h1 id="cartTitle">Cart (0)</h1>
+</div>
+</div>
+<div class="delete-and-closebtn">
+  <button class="delete-all-button">Delete All</button>
+  <svg class="icon-close" width="24" height="24">
+    <use href="../images/icons/icons.svg#icon-close-sharp"></use>
+  </svg>
+</div>
+<!-- <div class="flex-cart"> -->
+<div class="product-card">
+  <img src="${img}" alt="${name}" class="product-image" />
+  <div class="product-details">
+    <h2 class="product-name">${product name}</h2>
+    <div class="cart-product-box">
+      <p class="product-category">
+        Category: <span class="category-slyle">${category}</span>
+      </p>
+      <p class="product-size">
+        Size: <span class="size-slyle">${size}</span>
+      </p>
     </div>
+    <p class="product-price">${price}</p>
+
+    <!-- <button class="remove-button" onclick="removeProduct()">Remove</button> -->
   </div>
+</div>
+
+<div class="order-summary">
+  <h1 class="order-title">YOUR ORDER</h1>
+  <div class="summary-box">
+    <p class="product-name">Total</p>
+    <p>Sum: ${sum}</p>
+  </div>
+  <div class="email-and-checkout">
+    <input type="email" placeholder="Mail: Enter your email" class="email-input" />
+    <button class="checkout-button">Checkout</button>
+  </div>
+</div>
+</div>
 
   <div class="cart-content" id="cartContent">
     <img src="./images/basket-2x.png" alt="Basket Image" />
