fix pagin icons

--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,7 +1,7 @@
 <div class="pag-ribbon">
   <button type="button" class="pag-btn pag-item">
     <svg class="arrow-icon" width="12" height="12">
-      <use href="../images/icons/icons.svg#icon-caret-small-left"></use>
+      <use href="./images/icons/icons.svg#icon-caret-small-left"></use>
     </svg>
   </button>
   <ul class="pag-wrapper">
@@ -13,7 +13,7 @@
   </ul>
   <button type="button" class="pag-btn pag-item">
     <svg class="arrow-icon" width="12" height="12">
-      <use href="../images/icons/icons.svg#icon-caret-small-right"></use>
+      <use href="./images/icons/icons.svg#icon-caret-small-right"></use>
     </svg>
   </button>
 </div>
