--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -12,7 +12,7 @@
 <div class="delete-and-closebtn">
   <button class="delete-all-button">Delete All</button>
   <svg class="icon-close" width="24" height="24">
-    <use href="../images/icons/icons.svg#icon-close-sharp"></use>
+    <use href="./images/icons/icons.svg#icon-close-sharp"></use>
   </svg>
 </div>
 <!-- <div class="flex-cart"> -->
